apps/wallet-service/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wallet-services-ns
  labels:
    name: wallet-services-ns
