apps/wallet-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-service
  namespace: wallet-services-ns
spec:
  selector:
    app: wallet-service
  ports:
    - protocol: TCP
      port: 22
      targetPort: 2222
